--- a/www/home.html
+++ b/www/home.html
@@ -381,10 +381,9 @@ at University of California San Diego (UCSD), Rady School of Management,
 remains a vital resource filled with rich lessons and captivating case
 studies in business analytics.</p>
 <p>On this website, I dive into these insightful case studies, offering
-my personal interpretations and solutions, primarily employing R and
-occasionally Python. It’s a vibrant space for exploring the intricate
-connections between data, models, and decision-making in the business
-world.</p>
+my personal interpretations and solutions, primarily employing R or
+Python. It’s a vibrant space for exploring the intricate connections
+between data, models, and decision-making in the business world.</p>
 <p>I welcome your thoughts, feedback, or any discussions at <a href="mailto:businessanalyticsslee@gmail.com">businessanalyticsslee@gmail.com</a>
 or <a href="mailto:sanlee8495@gmail.com">sanlee8495@gmail.com</a>.</p>
 <hr />
