--- a/www/home.html
+++ b/www/home.html
@@ -390,7 +390,7 @@ or <a href="mailto:sanlee8495@gmail.com">sanlee8495@gmail.com</a>.</p>
 <hr />
 <hr />
 <div id="footer">
-<pre><code>  Copyright © 2023-2024 Sangho Lee, All rights reserved.</code></pre>
+<p>Copyright © 2023- 2023 Sangho Lee, All rights reserved.</p>
 </div>
 </div>
 
