--- a/www/home.html
+++ b/www/home.html
@@ -385,6 +385,9 @@ insightful case studies, offering my personal interpretations and
 solutions, primarily employing R or Python. It’s a vibrant space for
 exploring the intricate connections between data, models, and
 decision-making in the business world.</p>
+<p>I strive to maintain a balance between informative content and
+engaging analysis, ensuring that the experience remains fun and exciting
+without being boring!</p>
 <p>I welcome your thoughts, feedback, or any discussions at <a href="mailto:businessanalyticsslee@gmail.com">businessanalyticsslee@gmail.com</a>
 or <a href="mailto:sanlee8495@gmail.com">sanlee8495@gmail.com</a>.</p>
 <hr />
