--- a/www/home.html
+++ b/www/home.html
@@ -370,7 +370,8 @@ font-size: 0.9em;
 </style>
 <hr />
 <hr />
-<p><br> ## Welcome to my Business Analytics Website</p>
+<div id="welcome-to-my-business-analytics-website" class="section level1">
+<h1>Welcome to my Business Analytics Website</h1>
 <p><br></p>
 <p>Step into the world of the book “Data, Models, and Decisions” written
 by Dimitris Bertsimas and Robert M. Freund, distinguished professors
@@ -393,6 +394,7 @@ or <a href="mailto:sanlee8495@gmail.com">sanlee8495@gmail.com</a>.</p>
 <hr />
 <div id="footer">
 <p>Copyright © 2023- 2023 Sangho Lee, All rights reserved.</p>
+</div>
 </div>
 
 
