--- a/www/home.html
+++ b/www/home.html
@@ -383,13 +383,12 @@ at University of California San Diego (UCSD), Rady School of Management,
 remains a vital resource filled with rich lessons and captivating case
 studies in business analytics.</p>
 <p>On this website (built in R Shiny), I dive into these insightful case
-studies, offering my personal interpretations and solutions, primarily
-employing R or Python. It’s a vibrant space for exploring the intricate
-connections between data, models, and decision-making in the business
-world.</p>
-<p>I strive to maintain a balance between informative content and
-engaging analysis, ensuring that the experience remains fun and exciting
-without being boring!</p>
+studies, offering my personal interpretations and solutions. It’s a
+vibrant space for exploring the intricate connections between data,
+models, and decision-making in the business world.</p>
+<p>I try to maintain a balance between informative content and engaging
+analysis, ensuring that the experience remains fun and exciting without
+being boring!</p>
 <p>I welcome your thoughts, feedback, or any discussions at <a href="mailto:businessanalyticsslee@gmail.com">businessanalyticsslee@gmail.com</a>
 or <a href="mailto:sanlee8495@gmail.com">sanlee8495@gmail.com</a>.</p>
 <p><br></p>
