--- a/www/marketing_analytics_mle_2.html
+++ b/www/marketing_analytics_mle_2.html
@@ -401,8 +401,13 @@ San Diego, MSBA program; MGTA 495 - Marketing Analytics course.
 </ul>
 <p><strong>What is the goal of the analysis?</strong> <br></p>
 <ul>
-<li>The goal is to analyze the 40,000 Airbnb listings from New York City
-to identify patterns and trends.</li>
+<li>This analysis aims to identify the most profitable Airbnb business
+model by examining how room type affects pricing strategies and guest
+feedback, focusing on median prices, price spread, and outliers across
+Private rooms, Entire homes/apartments, and Shared rooms. The analysis
+will provide insights into the most profitable room type and help guide
+marketing strategies by identifying the most effective methods for
+promoting Airbnb listings to potential guests.</li>
 </ul>
 </div>
 <div id="section" class="section level2">
